# trackbot_ros2

./: README.md
trackbot_controller/: package.xml  setup.cfg  setup.py
trackbot_controller/config/: teleop_keyboard.yaml
trackbot_controller/launch/: teleop_keyboard.launch.py
trackbot_controller/trackbot_controller/: teleop_keyboard.py
trackbot_gazebo/: CMakeLists.txt  package.xml
trackbot_gazebo/config/: worlds.yaml
trackbot_gazebo/launch/: bringup.launch.py  empty_world.launch.py  gazebo_world.launch.py  robot_state_publisher.launch.py  spawn_trackbot_vehicle.launch.py  trackbot_sim.launch.py
trackbot_gazebo/models/trackbot_sensors/: sensors.xacro
trackbot_gazebo/models/trackbot_vehicle/: bogie.xacro  model.config  model.urdf.xacro  wheel.xacro
trackbot_gazebo/models/trackbot_vehicle/bak/: model.sdf
trackbot_gazebo/models/trackbot_vehicle/meshes/: robot_base.stl
trackbot_gazebo/urdf/: common_properties.urdf  trackbot_vehicle.urdf
trackbot_gazebo/worlds/: baylands.sdf  empty_world.sdf  empty_world.world
