<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trackbot_controller</name>
  <version>0.0.1</version>
  <description>Keyboard teleop launcher for Trackbot (/cmd_vel).</description>
  <maintainer email="kyuhyong@gmail.com">Kyuhyong</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>teleop_twist_keyboard</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
